--- a/test/test.product/pom.xml
+++ b/test/test.product/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>hu.blackeblt.judo.eclipse.jdk.zulu</groupId>
     <artifactId>test-app</artifactId>
-    <version>8.0.232</version>
+    <version>8.0.232-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
