JNG-906 Fixing typo in name

--- a/bundles/hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64/pom.xml
+++ b/bundles/hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>hu.blackeblt.judo.eclipse.jdk.zulu</groupId>
+		<groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
 		<artifactId>jdk-bundles</artifactId>
 		<version>8.0.232-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
-	<artifactId>hu.blackeblt.judo.eclipse.jdk.zulu.linux.x86_64</artifactId>
+	<artifactId>hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64</artifactId>
 	<packaging>eclipse-plugin</packaging>
 
 	<properties>
