--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-        <groupId>hu.blackeblt.judo.eclipse.jdk.zulu</groupId>
+        <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
         <artifactId>parent</artifactId>
         <version>8.0.232-SNAPSHOT</version>
 		<relativePath>..</relativePath>
@@ -26,9 +26,9 @@
 	</properties>
 
 	<modules>
-		<module>hu.blackeblt.judo.eclipse.jdk.zulu.linux.x86_64</module>
-		<module>hu.blackeblt.judo.eclipse.jdk.zulu.macosx.x86_64</module>
-		<module>hu.blackeblt.judo.eclipse.jdk.zulu.win32.x86_64</module>
+		<module>hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64</module>
+		<module>hu.blackbelt.judo.eclipse.jdk.zulu.macosx.x86_64</module>
+		<module>hu.blackbelt.judo.eclipse.jdk.zulu.win32.x86_64</module>
 	</modules>
 
 	<build>
