--- a/test/pom.xml
+++ b/test/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
     <parent>
-      <groupId>hu.blackeblt.judo.eclipse.jdk.zulu</groupId>
+      <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
       <artifactId>parent</artifactId>
       <version>8.0.232-SNAPSHOT</version>
       <relativePath>..</relativePath>
