--- a/test/test.rcp/pom.xml
+++ b/test/test.rcp/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
     <parent>
-      <groupId>hu.blackeblt.judo.eclipse.jdk.zulu</groupId>
+      <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
       <artifactId>test-app</artifactId>
       <version>8.0.232-SNAPSHOT</version>
       <relativePath>..</relativePath>
