Eclipse project files added

--- a/feature/.project
+++ b/feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>test.feature</name>
+	<name>hu.blackbelt.judo.eclipse.jdk.zulu.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
