--- a/bundles/hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64/.project
+++ b/bundles/hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>test.rcp</name>
+	<name>hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64</name>
 	<comment></comment>
 	<projects>
 	</projects>
