--- a/bundles/hu.blackbelt.judo.eclipse.jdk.zulu.win32.x86_64/pom.xml
+++ b/bundles/hu.blackbelt.judo.eclipse.jdk.zulu.win32.x86_64/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
         <artifactId>jdk-bundles</artifactId>
-        <version>8.0.232-SNAPSHOT</version>
+        <version>8.0.232</version>
         <relativePath>..</relativePath>
     </parent>
 
