--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
 	<artifactId>parent</artifactId>
-    <version>8.0.232-SNAPSHOT</version>
+    <version>8.0.232</version>
 	<packaging>pom</packaging>
 
 	<name>Bundled Oracle Java JRE</name>
