--- a/test/test.feature/pom.xml
+++ b/test/test.feature/pom.xml
@@ -6,7 +6,7 @@
     <parent>
       <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
       <artifactId>test-app</artifactId>
-      <version>8.0.232</version>
+      <version>8.0.233-SNAPSHOT</version>
       <relativePath>..</relativePath>
     </parent>
 
