Skip github upload [ci skip]

--- a/pom.xml
+++ b/pom.xml
@@ -314,6 +314,7 @@
                             <tag>${project.version}</tag>
                             <deleteRelease>true</deleteRelease>
                             <commitish>${env.WERCKER_GIT_COMMIT}</commitish>
+                            <!--
                             <fileSets>
                                 <fileSet>
                                     <directory>${basedir}/updatesite/target</directory>
@@ -321,7 +322,7 @@
                                         <include>*.zip</include>
                                     </includes>
                                 </fileSet>
-                            </fileSets>
+                            </fileSets> -->
                         </configuration>
                         <executions>
                             <execution>
