--- a/test/pom.xml
+++ b/test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
       <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
       <artifactId>parent</artifactId>
-      <version>8.0.242-SNAPSHOT</version>
+      <version>8.0.242</version>
       <relativePath>..</relativePath>
     </parent>
 
