--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 		<repository>
 			<id>eclipse</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/eclipse/updates/4.9/R-4.9-201809060745</url>
+			<url>https://download.eclipse.org/eclipse/updates/4.9/R-4.9-201809060745</url>
 		</repository>
 	</repositories>
 
