--- a/bundles/hu.blackbelt.judo.eclipse.jdk.zulu.macosx.x86_64/pom.xml
+++ b/bundles/hu.blackbelt.judo.eclipse.jdk.zulu.macosx.x86_64/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
         <artifactId>jdk-bundles</artifactId>
-        <version>8.0.243-SNAPSHOT</version>
+        <version>11.0.8-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -14,7 +14,7 @@
 
 	<properties>
 		<download.filePostfix>macosx_x64.zip</download.filePostfix>
-		<download.unzippedFolderPostfix>macosx_x64</download.unzippedFolderPostfix>
+		<download.unzippedFolderPostfix>macosx_x64/zulu-11.jdk/Contents/Home</download.unzippedFolderPostfix>
 		<jdk.folder>Contents/Home</jdk.folder>
 	</properties>
 
