--- a/bundles/hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64/pom.xml
+++ b/bundles/hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
 		<artifactId>jdk-bundles</artifactId>
-		<version>11.0.8-SNAPSHOT</version>
+		<version>11.0.8</version>
 		<relativePath>..</relativePath>
 	</parent>
 
