--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
         <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
         <artifactId>parent</artifactId>
-        <version>11.0.8</version>
+        <version>11.0.9-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
