--- a/wercker.yml
+++ b/wercker.yml
@@ -1,4 +1,6 @@
-box: maven:3.5.4-jdk-8
+box:
+  id: eu.gcr.io/judo-ng/judo-compiler
+  tag: 3.6.1-jdk11
 no-response-timeout: 15
 command-timeout: 60
 ignore-file: .gitignore
