--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
 	<artifactId>parent</artifactId>
-    <version>11.0.9-SNAPSHOT</version>
+    <version>11.0.8-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Bundled Zulu Java JDK</name>
@@ -289,45 +289,40 @@
             </distributionManagement>
         </profile>
 
+
         <profile>
-            <id>release-github</id>
+            <id>generate-github-release-body</id>
+            <activation>
+                <property>
+                    <name>github_release</name>
+                    <value>true</value>
+                </property>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>de.jutzig</groupId>
-                        <artifactId>github-release-plugin</artifactId>
-                        <version>1.3.0</version>
-                        <inherited>false</inherited>
-                        <configuration>
-                            <repositoryId>${project-repositoryId}</repositoryId>
-                            <description>
-                                **Branch:** ${env.WERCKER_GIT_BRANCH}
-                                **P2 Update Site:** ${env.JUDONG_P2_UPSTREAM}/repository/p2/${project-shortname}/${project.version}
-                                **Maven repository:** ${env.JUDONG_MAVEN_UPSTREAM_SNAPSHOT}/#browse/browse:maven-judo-release:hu%2Fblackbelt%2Feclipse%2F${project-shortname}
-                                **Wercker:** https://app.wercker.com/${project-repositoryId}/runs/build/${env.WERCKER_RUN_ID}
-                            </description>
-                            <releaseName>${project.version}</releaseName>
-                            <prerelease>true</prerelease>
-                            <tag>${project.version}</tag>
-                            <deleteRelease>true</deleteRelease>
-                            <commitish>${env.WERCKER_GIT_COMMIT}</commitish>
-                            <!--
-                            <fileSets>
-                                <fileSet>
-                                    <directory>${basedir}/updatesite/target</directory>
-                                    <includes>
-                                        <include>*.zip</include>
-                                    </includes>
-                                </fileSet>
-                            </fileSets> -->
-                        </configuration>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <version>3.2.0</version>
                         <executions>
                             <execution>
-                                <id>release-to-github</id>
-                                <phase>deploy</phase>
+                                <id>template-github-release-body</id>
+                                <phase>process-resources</phase>
                                 <goals>
-                                    <goal>release</goal>
+                                    <goal>copy-resources</goal>
                                 </goals>
+                                <configuration>
+                                    <outputDirectory>${basedir}/.release</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>${project.basedir}</directory>
+                                            <filtering>true</filtering>
+                                            <includes>
+                                                <include>.releasetemplate</include>
+                                            </includes>
+                                        </resource>
+                                    </resources>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
