--- a/wercker.yml
+++ b/wercker.yml
@@ -1,8 +1,6 @@
 box:
-      id: eu.gcr.io/judo-ng/maven
-      tag: latest
-      tag: 3.5.4-jdk-8
-      registry: https://eu.gcr.io
+  id: eu.gcr.io/judo-ng/judo-compiler
+  tag: 3.6.1-jdk11
 no-response-timeout: 15
 command-timeout: 60
 ignore-file: .gitignore
@@ -50,9 +48,24 @@ build:
       name: Deploy (with deploy profiles)
       goals: deploy
       settings: .maven.xml
-      maven_opts: -Dtycho.mode=maven -DdeployOnly -Dgithub_release=true -Dgithub.prerelease=true -Dgithub.commitish=${WERCKER_GIT_COMMIT}
+      maven_opts: -Dtycho.mode=maven -DdeployOnly -DskipTests=true -Dgithub_release=true
       profiles: ${DEPLOY_PROFILES}
       cache_repo: true
+
+    - script:
+      name: get github release attributes
+      code: |-
+        export GITHUB_RELEASE_BODY=$(cat ./.release/.releasetemplate | jq -aRs . | sed 's/"//g')
+        export GITHUB_RELEASE_TITLE=$(echo "$VERSION_NUMBER" | jq -aRs . | sed 's/"//g')
+        echo "Release title: $GITHUB_RELEASE_TITLE"
+        echo "Release notes: $GITHUB_RELEASE_BODY"
+
+    - github-create-release:
+      token: $GITHUB_ACCESS_TOKEN
+      tag: $VERSION_NUMBER
+      title: $GITHUB_RELEASE_TITLE
+      body: $GITHUB_RELEASE_BODY
+      prerelease: true
 
 #  after-steps:
 #    - mbrevda/github-status:
@@ -158,7 +171,7 @@ release:
       name: Deploy (with deploy profiles)
       goals: deploy
       settings: .maven.xml
-      maven_opts: -Dtycho.mode=maven -DdeployOnly -Dgithub_release=true -Dgithub.prerelease=true -Dgithub.commitish=${WERCKER_GIT_COMMIT}
+      maven_opts: -Dtycho.mode=maven -DdeployOnly -DskipTests=true -Dgithub_release=true
       profiles: ${DEPLOY_PROFILES}
       cache_repo: true
 
@@ -229,3 +242,18 @@ release:
       code: |-
              git push origin --all
              git push origin --tags
+
+    - script:
+      name: get github release attributes
+      code: |-
+        export GITHUB_RELEASE_BODY=$(cat ./.release/.releasetemplate | jq -aRs . | sed 's/"//g')
+        export GITHUB_RELEASE_TITLE=$(echo "$VERSION_NUMBER" | jq -aRs . | sed 's/"//g')
+        echo "Release title: $GITHUB_RELEASE_TITLE"
+        echo "Release notes: $GITHUB_RELEASE_BODY"
+
+    - github-create-release:
+      token: $GITHUB_ACCESS_TOKEN
+      tag: $VERSION_NUMBER
+      title: $GITHUB_RELEASE_TITLE
+      body: $GITHUB_RELEASE_BODY
+
