--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -6,8 +6,7 @@
   <parent>
     <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
     <artifactId>parent</artifactId>
-    <version>11.0.8-SNAPSHOT</version>
-    <relativePath>..</relativePath>
+    <version>${revision}</version>
   </parent>
 
   <artifactId>hu.blackbelt.judo.eclipse.jdk.zulu.feature</artifactId>
