--- a/hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64/pom.xml
+++ b/hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64/pom.xml
@@ -2,20 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
+	<parent>
         <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
-        <artifactId>jdk-bundles</artifactId>
-        <version>11.0.8-SNAPSHOT</version>
-        <relativePath>..</relativePath>
-    </parent>
+        <artifactId>parent</artifactId>
+        <version>${revision}</version>
+	</parent>
 
-    <artifactId>hu.blackbelt.judo.eclipse.jdk.zulu.macosx.x86_64</artifactId>
+	<artifactId>hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64</artifactId>
 	<packaging>eclipse-plugin</packaging>
 
 	<properties>
-		<download.filePostfix>macosx_x64.zip</download.filePostfix>
-		<download.unzippedFolderPostfix>macosx_x64/zulu-11.jdk/Contents/Home</download.unzippedFolderPostfix>
-		<jdk.folder>Contents/Home</jdk.folder>
+		<download.filePostfix>linux_x64.tar.gz</download.filePostfix>
+		<download.unzippedFolderPostfix>linux_x64</download.unzippedFolderPostfix>
+		<download.type>gzip</download.type>
+		<jdk.folder></jdk.folder>
 	</properties>
 
 	<build>
@@ -28,8 +28,8 @@
 					<pomDependencies>consider</pomDependencies>
 					<environments>
 						<environment>
-							<os>macosx</os>
-							<ws>cocoa</ws>
+							<os>linux</os>
+							<ws>gtk</ws>
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
