--- a/hu.blackbelt.judo.eclipse.jdk.zulu.macosx.x86_64/pom.xml
+++ b/hu.blackbelt.judo.eclipse.jdk.zulu.macosx.x86_64/pom.xml
@@ -2,20 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
+	<parent>
         <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
-        <artifactId>jdk-bundles</artifactId>
-        <version>11.0.8-SNAPSHOT</version>
-        <relativePath>..</relativePath>
-    </parent>
+        <artifactId>parent</artifactId>
+        <version>${revision}</version>
+	</parent>
 
-    <artifactId>hu.blackbelt.judo.eclipse.jdk.zulu.win32.x86_64</artifactId>
-    <packaging>eclipse-plugin</packaging>
+    <artifactId>hu.blackbelt.judo.eclipse.jdk.zulu.macosx.x86_64</artifactId>
+	<packaging>eclipse-plugin</packaging>
 
 	<properties>
-		<download.filePostfix>win_x64.zip</download.filePostfix>
-		<download.unzippedFolderPostfix>win_x64</download.unzippedFolderPostfix>
-		<jdk.folder></jdk.folder>
+		<download.filePostfix>macosx_x64.zip</download.filePostfix>
+		<download.unzippedFolderPostfix>macosx_x64/zulu-11.jdk/Contents/Home</download.unzippedFolderPostfix>
+		<jdk.folder>Contents/Home</jdk.folder>
 	</properties>
 
 	<build>
@@ -28,8 +27,8 @@
 					<pomDependencies>consider</pomDependencies>
 					<environments>
 						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
+							<os>macosx</os>
+							<ws>cocoa</ws>
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
@@ -46,6 +45,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jarsigner-plugin</artifactId>
 				<version>${jarsigner.plugin.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-packaging-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
