--- a/hu.blackbelt.judo.eclipse.jdk.zulu.win32.x86_64/pom.xml
+++ b/hu.blackbelt.judo.eclipse.jdk.zulu.win32.x86_64/pom.xml
@@ -3,19 +3,17 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
-		<artifactId>jdk-bundles</artifactId>
-		<version>11.0.8-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+        <groupId>hu.blackbelt.judo.eclipse.jdk.zulu</groupId>
+        <artifactId>parent</artifactId>
+        <version>${revision}</version>
 	</parent>
 
-	<artifactId>hu.blackbelt.judo.eclipse.jdk.zulu.linux.x86_64</artifactId>
-	<packaging>eclipse-plugin</packaging>
+    <artifactId>hu.blackbelt.judo.eclipse.jdk.zulu.win32.x86_64</artifactId>
+    <packaging>eclipse-plugin</packaging>
 
 	<properties>
-		<download.filePostfix>linux_x64.tar.gz</download.filePostfix>
-		<download.unzippedFolderPostfix>linux_x64</download.unzippedFolderPostfix>
-		<download.type>gzip</download.type>
+		<download.filePostfix>win_x64.zip</download.filePostfix>
+		<download.unzippedFolderPostfix>win_x64</download.unzippedFolderPostfix>
 		<jdk.folder></jdk.folder>
 	</properties>
 
@@ -29,8 +27,8 @@
 					<pomDependencies>consider</pomDependencies>
 					<environments>
 						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
+							<os>win32</os>
+							<ws>win32</ws>
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
@@ -47,6 +45,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jarsigner-plugin</artifactId>
 				<version>${jarsigner.plugin.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-packaging-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
