--- a/hu.blackbelt.judo.eclipse.jdk.zulu.macosx.aarch64/src/main/template/Contents/Info.plist
+++ b/hu.blackbelt.judo.eclipse.jdk.zulu.macosx.aarch64/src/main/template/Contents/Info.plist
@@ -13,7 +13,7 @@
                 <key>CFBundleInfoDictionaryVersion</key>
                 <string>7.0</string>
                 <key>CFBundleName</key>
-                <string>OpenJDK 8</string>
+                <string>OpenJDK Zulu (${version})</string>
                 <key>CFBundlePackageType</key>
                 <string>BNDL</string>
                 <key>CFBundleShortVersionString</key>
