--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     </developers>
     
     <properties>
-        <revision>11.0.15-SNAPSHOT</revision>
+        <revision>11.0.15</revision>
         <maven>3.8.3</maven>
         <project-shortname>judo-eclipse-zulu-jdk</project-shortname>
         <project-repositoryId>BlackBeltTechnology/judo-eclipse-zulu-jdk</project-repositoryId>
