--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,7 +127,7 @@ jobs:
       - name: ⏭️ Increase version number
         id: next_version
         run: |-
-          NEXT_VERSION="${{ github.event.inputs.next_version }}-SNAPSHOT"
+          NEXT_VERSION="${{ github.event.inputs.next_version }}"
           if [ -z "$NEXT_VERSION" ] || [ $NEXT_VERSION == "Auto" ]; then
             NEXT_VERSION=`(echo $(./mvnw build-helper:parse-version org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate \
               -Dtycho.mode=maven -DskipModules=true -Dexpression="parsedVersion.majorVersion" -q -DforceStdout) &&\
@@ -141,7 +141,7 @@ jobs:
             | tr -d '\n'`
           fi
           echo "Next version is: $NEXT_VERSION"
-          echo "::set-output name=version::${NEXT_VERSION}"
+          echo "::set-output name=version::${NEXT_VERSION}-SNAPSHOT"
 
       - name: Set next version
         run: |-
