JNG-3834 Fixing snapshot version tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -140,8 +140,11 @@ jobs:
             echo "-SNAPSHOT") \
             | tr -d '\n'`
           fi
+          if [ $NEXT_VERSION != "*-SNAPSHOT" ]; then
+              NEXT_VERSION="${NEXT_VERSION}-SNAPSHOT"
+          fi
           echo "Next version is: $NEXT_VERSION"
-          echo "::set-output name=version::${NEXT_VERSION}-SNAPSHOT"
+          echo "::set-output name=version::${NEXT_VERSION}"
 
       - name: Set next version
         run: |-
