--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,17 +123,7 @@ jobs:
           -Prelease-judong \
           deploy
 
-      # Phase 2 - Build and deploy to maven central
-      - name: 🎁 Deploy with Maven (central)
-        if: ${{ always() && startsWith(github.head_ref, 'release') && job.status == 'success' }}
-        run: |-
-          ./mvnw -B -Dstyle.color=always \
-          -Drevision=${{ steps.version.outputs.version }} \
-          -DdeployOnly \
-          -P"release-central,sign-artifacts,-verify-feature" \
-          -Dmaven.test.skip=true \
-          deploy
-
+      # Phase 2 - Deploy to P2
       - name: Release P2 (parallel uoload)
         run: |-
           export BASE_URL=https://nexus.judo.technology/repository/p2-judong/judo-eclipse-zulu-jdk/${{ steps.version.outputs.version }}
@@ -155,6 +145,17 @@ jobs:
           REP_DIR_LEN=`echo -n "$REPOSITORY_DIR" | wc -c`; REP_DIR_LEN=$(($REP_DIR_LEN + 1))
 
           find $REPOSITORY_DIR -type f -print0 | xargs -0 -I file echo "file" | cut -c$REP_DIR_LEN- | xargs -P $NUM_OF_PROC -I {} bash -c 'callUpload "$@"' _ {}
+
+      # Phase 3 - Build and deploy to maven central
+      - name: 🎁 Deploy with Maven (central)
+        if: ${{ always() && startsWith(github.head_ref, 'release') && job.status == 'success' }}
+        run: |-
+          ./mvnw -B -Dstyle.color=always \
+          -Drevision=${{ steps.version.outputs.version }} \
+          -DdeployOnly \
+          -P"release-central,sign-artifacts,-verify-feature" \
+          -Dmaven.test.skip=true \
+          deploy
 
 #      - name: 🔎 Sonar Metrics
 #        if: steps.context.outputs.branch == 'develop'
